# betterbox-tts-core

./: .ai-devkit.json  .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  app.py  distributionApp.spec  docker-compose.yml  runApp.bat  skills-lock.json
.cursor/: README.md
.cursor/rules/: agent-coordination.mdc  betterbox-orientation.mdc  codex-review-gate.mdc  docker-services.mdc  ponytail.mdc  skill-auto-routing.mdc  story-pipeline-python.mdc  story-reader-nextjs.mdc
.github/: pull_request_template.md
OmniVoice/: .gitignore  README.md  pyproject.toml
OmniVoice/chunkformer/: .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
OmniVoice/chunkformer/apps/realtime-asr/: audio_capture.py  config.py  requirements.txt  stream_asr.py  test_with_file.py
OmniVoice/chunkformer/apps/streamlit/: __init__.py  app.py  audio_processing.py  config.py  requirements.txt  transcription.py  ui_components.py  utils.py
OmniVoice/chunkformer/chunkformer/: __init__.py  chunkformer_model.py
OmniVoice/chunkformer/chunkformer/dataset/: datapipes.py  dataset.py  kaldi_io.py  processor.py  wav_distortion.py
OmniVoice/chunkformer/chunkformer/modules/: asr_model.py  attention.py  classification_model.py  cmvn.py  convolution.py  ctc.py  decoder.py  decoder_layer.py  embedding.py  encoder.py  encoder_layer.py  label_smoothing_loss.py  norm.py  positionwise_feed_forward.py  search.py  subsampling.py  swish.py
OmniVoice/chunkformer/chunkformer/text/: bpe_tokenizer.py  char_tokenizer.py  tokenize_utils.py
OmniVoice/chunkformer/chunkformer/transducer/: joint.py  predictor.py  transducer.py
OmniVoice/chunkformer/chunkformer/transducer/search/: greedy_search.py  prefix_beam_search.py
OmniVoice/chunkformer/chunkformer/utils/: checkpoint.py  class_utils.py  cmvn.py  common.py  config.py  context_graph.py  executor.py  file_utils.py  fsdp_utils.py  init_dataset.py  init_model.py  init_tokenizer.py  mask.py  model_utils.py  scheduler.py  train_utils.py
OmniVoice/chunkformer/examples/: README.md
OmniVoice/chunkformer/examples/asr/: README.md
OmniVoice/chunkformer/examples/asr/ctc/: run.sh
OmniVoice/chunkformer/examples/asr/ctc/conf/: chunkformer-ctc-small-libri-100h.yaml  chunkformer-ctc-small-libri-960h-stream-dct.yaml  chunkformer-ctc-small-libri-960h.yaml
OmniVoice/chunkformer/examples/asr/rnnt/: chunkformer  path.sh  run.sh
OmniVoice/chunkformer/examples/asr/rnnt/conf/: chunkformer-rnnt-large-vie.yaml  chunkformer-rnnt-small-libri-100h.yaml
OmniVoice/chunkformer/examples/classification/: README.md  RESULTS.md  path.sh  run.sh
OmniVoice/chunkformer/examples/classification/conf/: multi_task.yaml  single_task.yaml
OmniVoice/chunkformer/samples/: data.tsv
OmniVoice/chunkformer/tests/: test_classification_output.py  test_wer_ctc_performance.py  test_wer_rnnt_performance.py
OmniVoice/chunkformer/tools/: compute-wer.py  compute_classification_metrics.py  compute_cmvn_stats.py  compute_label_stats.py  convert_text_labels_to_int.py  push_model_hf.py  split_train_test.py  spm_encode.py  tsv_to_list.py
OmniVoice/chunkformer/tools/fst/: ctc_token_fst.py  ctc_token_fst_compact.py  ctc_token_fst_corrected.py  prepare_dict.py  rnnt_token_fst.py
docker/: env.example  story-pipeline-requirements.txt  story-pipeline.Dockerfile  story-tts-gpu.Dockerfile
general/: __init__.py  general_tool_audio.py  noise_detect_VAD.py  requirements-mac.txt  requirements.txt
scripts/: download_dolly_voice_bank.py  download_vieneu_voice_bank.py  install-cursor-skills.sh  request_codex_review.sh
story_db/: .env.example  README.md  apply_migrations.py  cron.example  docker-compose.yml
viterbox/: __init__.py  pretrain_voice_builder.py  tts.py  tts_generate_speech.py
(+242 files in other folders)
